Update the acknowledgements part

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -3,5 +3,7 @@
 
 
 \section{ACKNOWLEDGEMENTS}\label{sec:acknowledgements}
-The first I really want to thank is Prof. Ming Li. I applied to joint Prof. Ming Li's Lab during the summer of my freshman year.
-Later on, under the guidance and resources provided by the professor, I started my research in the field of speech analysis technology and speech separation.
+First and foremost, I would like to thank my research mentor Professor Ming Li who provided huge help to me in the past three years.
+I first met the professor was in the class of CS 101.
+Later on I applied to join Prof. Ming Li's Speech and Multimodal Intelligent Information Processing (SMIIP) Lab during the summer of my freshman year.
+From that time, under the guidance and resources provided by the professor, I started my research in the field of speech analysis technology and speech separation.
