Update acknowledgements part

--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -4,6 +4,16 @@
 
 \section{ACKNOWLEDGEMENTS}\label{sec:acknowledgements}
 First and foremost, I would like to thank my research mentor Professor Ming Li who provided huge help to me in the past three years.
-I first met the professor was in the class of CS 101.
+I first met the professor was in the class of CS 101 Introduction to Computer Science.
 Later on I applied to join Prof. Ming Li's Speech and Multimodal Intelligent Information Processing (SMIIP) Lab during the summer of my freshman year.
 From that time, under the guidance and resources provided by the professor, I started my research in the field of speech analysis technology and speech separation.
+Without the professor's invaluable guidance, my research in the field of speech analysis technology and this signature work cannot happen.
+
+Second, I want to thank my senior schoolfellows Yuanyuan Bao, Yanze Xu, Bang Zeng, Zhan Jin and all the other members in the same lab.
+They provided a lot of help on my path of doing research in target speaker separation (TSS) field.
+It is their help that I can move forward smoother and I learned a lot of skills from them.
+
+Third, I want to thank Summer Research Scholar (SRS) program provided by Duke Kunshan University.
+This program provided research fund during the summer of my junior year.
+
+Last but not least, I want to thank all the members in my family. They have supported me for all my life.
