Chang font size to 11pt and make table smaller

--- a/Paper.tex
+++ b/Paper.tex
@@ -4,8 +4,7 @@
 \PassOptionsToPackage{unicode}{hyperref}
 \PassOptionsToPackage{hyphens}{url}
 %
-\documentclass[
-]{article}
+\documentclass[11pt]{article}
 \usepackage{amsmath,amssymb}
 \usepackage{lmodern}
 \usepackage{iftex}
