--- a/experiments.tex
+++ b/experiments.tex
@@ -42,6 +42,7 @@ A target pitch extraction examples selected from the test set is shown in Figure
 \end{figure}
 
 \begin{table*}[!htbp]
+    \small
     \centering
     \begin{tabular}{l|c|c|c|c}
         \toprule
