Update background what is TSS task

--- a/Paper.tex
+++ b/Paper.tex
@@ -125,6 +125,8 @@
 
         \input{introduction.tex}
 
+        \input{background.tex}
+
         \input{model_architecture.tex}
 
         \input{experiments.tex}
