--- a/reference.bib
+++ b/reference.bib
@@ -269,3 +269,12 @@
     pages = {6965-6969},
     doi = {10.1109/ICASSP.2019.8683087}
 }
+@ARTICLE{performance_measurement,
+    author = {Vincent, E. and Gribonval, R. and Fevotte, C.},
+    journal = {IEEE Transactions on Audio, Speech, and Language Processing},
+    title = {Performance measurement in blind audio source separation},
+    year = {2006},
+    volume = {14},
+    number = {4},
+    pages = {1462-1469},
+    doi = {10.1109/TSA.2005.858005} }
