Update metric description

--- a/background.tex
+++ b/background.tex
@@ -20,6 +20,8 @@ The task is given $X\left( t \right) = \sum\limits_{i=1}^N U_i\left( t \right) +
 \subsection{Metrics}\label{subsec:metrics}
 
 Using meaningful metrics to define the performance of the separation system is important.
+To evaluate the performance of separation system, the metric should be designed to objectively represent ``how good'' the extracted waveform is.
+The idea of projecting one high dimensional vector onto another high dimensional vector comes in mind.
 
 \begin{itemize}
     \item source-to-distortion ratio (SDR)
