Add waveform example

--- a/background.tex
+++ b/background.tex
@@ -14,6 +14,14 @@ So the mixed utterance $X\left( t \right)$ is as equation~\ref{eq:mixed}.
     X\left( t \right) = \sum\limits_{i=1}^N U_i\left( t \right) + e\left( t \right)
     \label{eq:mixed}
 \end{equation}
+One waveform example is as figure~\ref{fig:waveform}.
+\begin{figure}[!htbp]
+    \centering
+    \includegraphics[width=0.8\textwidth]{img/waveform}
+    \caption{One example of how waveform looks like}
+    \label{fig:waveform}
+\end{figure}
+
 For the mission of Target Speaker Separation (TSS) Task. Assume we only need to extract the voice of speaker $s_n$ from $X\left( t \right)$ and we have the reference utterance from $s_n$, denoted as $R_n$.
 The task is given $X\left( t \right) = \sum\limits_{i=1}^N U_i\left( t \right) + e\left( t \right)$ and $R_n$, we need to get $U_n\left( t \right)$.
 
