Update methodology and add references

--- a/background.tex
+++ b/background.tex
@@ -53,3 +53,11 @@ The idea of projecting one high dimensional vector onto another high dimensional
 \end{itemize}
 
 \subsection{Methodology}\label{subsec:methodology}
+
+To extract target speaker's voice from the mixed utterance, we first need to extract the information of the target speaker.
+One common way is to use a vector to represent target speaker's information, and we call it the speaker embedding.
+There are many ways and many different speaker embeddings, such as i-vector in~\cite{i-vector}, a speaker embedding based on end-to-end neural network in~\cite{deep_speaker}, x-vector in~\cite{x-vector}, d-vector in~\cite{d-vector}.
+
+\subsubsection{Frequency-domain methods}
+
+\subsubsection{Time-domain methods}
