--- a/reference.bib
+++ b/reference.bib
@@ -278,3 +278,44 @@
     number = {4},
     pages = {1462-1469},
     doi = {10.1109/TSA.2005.858005} }
+@article{i-vector,
+    title = {I-vector Extraction for Speaker Recognition Based on Dimensionality Reduction},
+    journal = {Procedia Computer Science},
+    volume = {126},
+    pages = {1534-1540},
+    year = {2018},
+    issn = {1877-0509},
+    doi = {https://doi.org/10.1016/j.procs.2018.08.126},
+    url = {https://www.sciencedirect.com/science/article/pii/S1877050918314042},
+    author = {Noor Salwani Ibrahim and Dzati Athiar Ramli},
+    keywords = {Bob Spear toolbox, I-vectors, Dimensionality Reduction, UBM size, Frog Identification},
+    abstract = {In the domain of speaker recognition, many methods have been proposed over time. The technology for automatic speaker recognition has now reached a good level of performance but there is still need of improvement. In this paper, a new low-dimensional speaker- and channel-dependent space is defined using a simple factor analysis also known as i-vector. This space is named the total variability space because it models both speaker and channel variabilities. The i-vector subspace modelling is one of the recent methods that have become the state of the art technique in this domain. This method largely provides the benefit of modelling both the intra-domain and inter-domain variabilities into the same low dimensional space. In this study, 2656 syllables bio-acoustic signals from 55 species of frog taken from Intelligent Biometric Group, USM database are used for frog identification system. Parameters of the system are initially tuned such as Universal Background Model (UBM) size (32, 64 and 128 Gaussians) and i-vector dimensionality (100, 200 and 400 dimensions). To the end, we assess the effect of the parameter tuned and record the computation time. We observed that, the accuracy for smaller UBM size and higher i-vector dimensionality outperforms others with result of 91.11% is achieved. From this research, it can be concluded that UBM size and i-vector dimensionality effect the accuracy of frog identification based on i-vector.}
+}
+@misc{deep_speaker,
+    doi = {10.48550/ARXIV.1705.02304},
+    url = {https://arxiv.org/abs/1705.02304},
+    author = {Li, Chao and Ma, Xiaokong and Jiang, Bing and Li, Xiangang and Zhang, Xuewei and Liu, Xiao and Cao, Ying and Kannan, Ajay and Zhu, Zhenyao},
+    keywords = {Computation and Language (cs.CL), FOS: Computer and information sciences, FOS: Computer and information sciences},
+    title = {Deep Speaker: an End-to-End Neural Speaker Embedding System},
+    publisher = {arXiv},
+    year = {2017},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@INPROCEEDINGS{x-vector,
+    author = {Snyder, David and Garcia-Romero, Daniel and Sell, Gregory and Povey, Daniel and Khudanpur, Sanjeev},
+    booktitle = {2018 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+    title = {X-Vectors: Robust DNN Embeddings for Speaker Recognition},
+    year = {2018},
+    volume = {},
+    number = {},
+    pages = {5329-5333},
+    doi = {10.1109/ICASSP.2018.8461375} }
+@INPROCEEDINGS{d-vector,
+    author = {Variani, Ehsan and Lei, Xin and McDermott, Erik and Moreno, Ignacio Lopez and Gonzalez-Dominguez, Javier},
+    booktitle = {2014 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+    title = {Deep neural networks for small footprint text-dependent speaker verification},
+    year = {2014},
+    volume = {},
+    number = {},
+    pages = {4052-4056},
+    doi = {10.1109/ICASSP.2014.6854363} }
