Update speaker embedding citation

--- a/reference.bib
+++ b/reference.bib
@@ -319,3 +319,24 @@
     number = {},
     pages = {4052-4056},
     doi = {10.1109/ICASSP.2014.6854363} }
+@misc{s-vector,
+    doi = {10.48550/ARXIV.2008.04659},
+    url = {https://arxiv.org/abs/2008.04659},
+    author = {Mary, N J Metilda Sagaya and Umesh, S and Katta, Sandesh V},
+    keywords = {Audio and Speech Processing (eess.AS), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+    title = {S-vectors and TESA: Speaker Embeddings and a Speaker Authenticator Based on Transformer Encoder},
+    publisher = {arXiv},
+    year = {2020},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@misc{attention,
+    doi = {10.48550/ARXIV.1706.03762},
+    url = {https://arxiv.org/abs/1706.03762},
+    author = {Vaswani, Ashish and Shazeer, Noam and Parmar, Niki and Uszkoreit, Jakob and Jones, Llion and Gomez, Aidan N. and Kaiser, Lukasz and Polosukhin, Illia},
+    keywords = {Computation and Language (cs.CL), Machine Learning (cs.LG), FOS: Computer and information sciences, FOS: Computer and information sciences},
+    title = {Attention Is All You Need},
+    publisher = {arXiv},
+    year = {2017},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
