--- a/reference.bib
+++ b/reference.bib
@@ -339,4 +339,21 @@
     year = {2017},
     copyright = {arXiv.org perpetual, non-exclusive license}
 }
-
+@INPROCEEDINGS{deep_clustering,
+    author = {Hershey, John R. and Chen, Zhuo and Le Roux, Jonathan and Watanabe, Shinji},
+    booktitle = {2016 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+    title = {Deep clustering: Discriminative embeddings for segmentation and separation},
+    year = {2016},
+    volume = {},
+    number = {},
+    pages = {31-35},
+    doi = {10.1109/ICASSP.2016.7471631} }
+@INPROCEEDINGS{PIT,
+    author = {Yu, Dong and Kolbæk, Morten and Tan, Zheng-Hua and Jensen, Jesper},
+    booktitle = {2017 IEEE International Conference on Acoustics, Speech and Signal Processing (ICASSP)},
+    title = {Permutation invariant training of deep models for speaker-independent multi-talker speech separation},
+    year = {2017},
+    volume = {},
+    number = {},
+    pages = {241-245},
+    doi = {10.1109/ICASSP.2017.7952154} }
