--- a/reference.bib
+++ b/reference.bib
@@ -357,3 +357,13 @@
     number = {},
     pages = {241-245},
     doi = {10.1109/ICASSP.2017.7952154} }
+@misc{uPIT,
+    doi = {10.48550/ARXIV.1703.06284},
+    url = {https://arxiv.org/abs/1703.06284},
+    author = {Kolbæk, Morten and Yu, Dong and Tan, Zheng-Hua and Jensen, Jesper},
+    keywords = {Sound (cs.SD), Machine Learning (cs.LG), Audio and Speech Processing (eess.AS), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+    title = {Multi-talker Speech Separation with Utterance-level Permutation Invariant Training of Deep Recurrent Neural Networks},
+    publisher = {arXiv},
+    year = {2017},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
