--- a/reference.bib
+++ b/reference.bib
@@ -1,12 +1,3 @@
-@InProceedings{C2,
-    author = "Jones, C.D. and Smith, A.B. and Roberts, E.F.",
-    title = "Article Title",
-    booktitle = "Proceedings Title",
-    organization = "IEEE",
-    year = "2003",
-    volume = "II",
-    pages = "803-806"
-}
 @inproceedings{li20p_interspeech,
     author = {Tingle Li and Qingjian Lin and Yuanyuan Bao and Ming Li},
     title = {{Atss-Net: Target Speaker Separation via Attention-Based Neural Network}},
@@ -365,5 +356,15 @@
     title = {Multi-talker Speech Separation with Utterance-level Permutation Invariant Training of Deep Recurrent Neural Networks},
     publisher = {arXiv},
     year = {2017},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@misc{DEF-DL,
+    doi = {10.48550/ARXIV.2003.07544},
+    url = {https://arxiv.org/abs/2003.07544},
+    author = {Fan, Cunhang and Tao, Jianhua and Liu, Bin and Yi, Jiangyan and Wen, Zhengqi and Liu, Xuefei},
+    keywords = {Audio and Speech Processing (eess.AS), Multimedia (cs.MM), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+    title = {Deep Attention Fusion Feature for Speech Separation with End-to-End Post-filter Method},
+    publisher = {arXiv},
+    year = {2020},
     copyright = {arXiv.org perpetual, non-exclusive license}
 }
