--- a/reference.bib
+++ b/reference.bib
@@ -368,3 +368,39 @@
     year = {2020},
     copyright = {arXiv.org perpetual, non-exclusive license}
 }
+@misc{WA-MISI,
+    doi = {10.48550/ARXIV.1804.10204},
+    url = {https://arxiv.org/abs/1804.10204},
+    author = {Wang, Zhong-Qiu and Roux, Jonathan Le and Wang, DeLiang and Hershey, John R.},
+    keywords = {Sound (cs.SD), Computation and Language (cs.CL), Machine Learning (cs.LG), Audio and Speech Processing (eess.AS), Machine Learning (stat.ML), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+    title = {End-to-End Speech Separation with Unfolded Iterative Phase Reconstruction},
+    publisher = {arXiv},
+    year = {2018},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@misc{Deep_CASA,
+    doi = {10.48550/ARXIV.1904.11148},
+    url = {https://arxiv.org/abs/1904.11148},
+    author = {Liu, Yuzhou and Wang, DeLiang},
+    keywords = {Sound (cs.SD), Machine Learning (cs.LG), Audio and Speech Processing (eess.AS), FOS: Computer and information sciences, FOS: Computer and information sciences, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering},
+    title = {Divide and Conquer: A Deep CASA Approach to Talker-independent Monaural Speaker Separation},
+    publisher = {arXiv},
+    year = {2019},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@misc{https://doi.org/10.48550/arxiv.1902.02546,
+    doi = {10.48550/ARXIV.1902.02546},
+    url = {https://arxiv.org/abs/1902.02546},
+    author = {Rao, Wei and Xu, Chenglin and Chng, Eng Siong and Li, Haizhou},
+    keywords = {Audio and Speech Processing (eess.AS), Sound (cs.SD), FOS: Electrical engineering, electronic engineering, information engineering, FOS: Electrical engineering, electronic engineering, information engineering, FOS: Computer and information sciences, FOS: Computer and information sciences},
+    title = {Target Speaker Extraction for Overlapped Multi-Talker Speaker Verification},
+    publisher = {arXiv},
+    year = {2019},
+    copyright = {arXiv.org perpetual, non-exclusive license}
+}
+@inproceedings{LSTM,
+    title = {Long short-term memory recurrent neural network architectures for large scale acoustic modeling},
+    author = {Hasim Sak and Andrew W. Senior and Françoise Beaufays},
+    booktitle = {INTERSPEECH},
+    year = {2014}
+}
