--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -16,4 +16,10 @@ It is their help that I can move forward smoother and I learned a lot of skills 
 Third, I want to thank Summer Research Scholar (SRS) program provided by Duke Kunshan University.
 This program provided research fund during the summer of my junior year.
 
-Last but not least, I want to thank all the members in my family. They have supported me for all my life.
+I also want to thank all the members in my family. They have supported me for all my life and they will always have my back.
+
+Next I want to thank Yunan Huang, my girlfriend. She and I had a long-distance relationship for the whole undergraduate life, which is very tough.
+She loves me, knows me, understands me and always inspires me when I met difficulties.
+
+Last but not least, I want to thank my friends, including Jiasheng Zhu, Ziang Zhou, Jiyang Tang, Mamabean and Bababean and all the other friends I met at DKU.
+Our invaluable friendship makes me a better person.
