--- a/Paper.tex
+++ b/Paper.tex
@@ -113,14 +113,14 @@
 
 
         \newpage
+
         \input{abstract.tex}
-
         \newpage
+
         \input{acknowledgements.tex}
-
         \newpage
-        \tableofcontents
 
+        \tableofcontents
         \newpage
 
         \listoftables
@@ -129,14 +129,19 @@
 
 
         \input{introduction.tex}
+        \newpage
 
         \input{background.tex}
+        \newpage
 
         \input{model_architecture.tex}
+        \newpage
 
         \input{experiments.tex}
+        \newpage
 
         \input{conclusions.tex}
+        \newpage
 
         \bibliographystyle{IEEEbib}
         \bibliography{reference}
