--- a/acknowledgements.tex
+++ b/acknowledgements.tex
@@ -3,23 +3,23 @@
 
 
 \section{ACKNOWLEDGEMENTS}\label{sec:acknowledgements}
-First and foremost, I would like to thank my research mentor Professor Ming Li who provided huge help to me in the past three years.
-I first met the professor was in the class of CS 101 Introduction to Computer Science.
-Later on I applied to join Prof. Ming Li's Speech and Multimodal Intelligent Information Processing (SMIIP) Lab during the summer of my freshman year.
+First and foremost, I would like to thank my research mentor Professor Ming Li who provided huge help to me over the past three years.
+I first met the professor in the class CS 101 Introduction to Computer Science.
+Later on, I applied to join Prof. Ming Li's Speech and Multimodal Intelligent Information Processing (SMIIP) Lab during the summer of my freshman year.
 From that time, under the guidance and resources provided by the professor, I started my research in the field of speech analysis technology and speech separation.
 Without the professor's invaluable guidance, my research in the field of speech analysis technology and this signature work cannot happen.
 
-Second, I want to thank my senior schoolfellows Yuanyuan Bao, Yanze Xu, Bang Zeng, Zhan Jin and all the other members in the same lab.
-They provided a lot of help on my path of doing research in target speaker separation (TSS) field.
-It is their help that I can move forward smoother and I learned a lot of skills from them.
+Second, I want to thank my senior schoolfellows Yuanyuan Bao, Yanze Xu, Bang Zeng, Zhan Jin, and all the other members in the same lab.
+They provided a lot of help on my path of doing research in the target speaker separation (TSS) field.
+It is their help that I can move forward smoothly and I learned a lot of skills from them.
 
 Third, I want to thank Summer Research Scholar (SRS) program provided by Duke Kunshan University.
-This program provided research fund during the summer of my junior year.
+This program provided research funds during the summer of my junior year.
 
-I also want to thank all the members in my family. They have supported me for all my life and they will always have my back.
+I also want to thank all the members of my family. They have supported me all my life and they will always have my back.
 
-Next I want to thank Yunan Huang, my girlfriend. She and I had a long-distance relationship for the whole undergraduate life, which is very tough.
-She loves me, knows me, understands me and always inspires me when I met difficulties.
+Next, I want to thank Yunan Huang, my girlfriend. She and I had a long-distance relationship for our whole undergraduate life, which is very tough.
+She loves me, knows me, understands me, and always inspires me when I met difficulties.
 
-Last but not least, I want to thank my friends, including Jiasheng Zhu, Ziang Zhou, Jiyang Tang, Mamabean and Bababean and all the other friends I met at DKU.
+Last but not least, I want to thank my friends, including Jiasheng Zhu, Ziang Zhou, Jiyang Tang, Mamabean and Bababean, and all the other friends I met at DKU.
 Our invaluable friendship makes me a better person.
